--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=projectLeasing
+server.port=8080
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/projectLeasing
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.jpa.properties.javax.persistence.validation.mode = none
